--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,28 @@
         gtag('config', 'UA-156660517-1');
     </script>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <!-- Primary Meta Tags -->
+    <title>devkitty - swiss army knife for developers</title>
+    <meta name="title" content="devkitty - swiss army knife for developers">
+    <meta name="description" content="Git, Jenkins, Terminal and more quick access tools">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://devkitty.app/">
+    <meta property="og:title" content="devkitty - swiss army knife for developers">
+    <meta property="og:description" content="Git, Jenkins, Terminal and more quick access tools">
+    <meta property="og:image" content="https://devkitty.app/devkitty.app.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://devkitty.app/">
+    <meta property="twitter:title" content="devkitty - swiss army knife for developers">
+    <meta property="twitter:description" content="Git, Jenkins, Terminal and more quick access tools">
+    <meta property="twitter:image" content="https://devkitty.app/devkitty.app.png">
 
     <link rel="apple-touch-icon" sizes="57x57" href="/favicons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/favicons/apple-icon-60x60.png">
@@ -26,33 +47,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="/favicons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Native app for easy switch and pull local projects"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Git Branch Manager</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
