--- a/public/index.html
+++ b/public/index.html
@@ -1,37 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156660517-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-156660517-1');
-    </script>
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <meta name="theme-color" content="#ffffff" />
 
     <!-- Primary Meta Tags -->
-    <title>devkitty - swiss army knife for developers</title>
-    <meta name="title" content="devkitty - swiss army knife for developers">
-    <meta name="description" content="Git, Jenkins, Terminal and more quick access tools">
+    <title>Devkitty</title>
+    <meta name="title" content="Devkitty">
+    <meta name="description" content="Devkitty - swiss army knife for developers">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://devkitty.app/">
-    <meta property="og:title" content="devkitty - swiss army knife for developers">
-    <meta property="og:description" content="Git, Jenkins, Terminal and more quick access tools">
+    <meta property="og:title" content="Devkitty">
+    <meta property="og:description" content="Devkitty - swiss army knife for developers">
     <meta property="og:image" content="https://devkitty.app/devkitty.app.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://devkitty.app/">
-    <meta property="twitter:title" content="devkitty - swiss army knife for developers">
-    <meta property="twitter:description" content="Git, Jenkins, Terminal and more quick access tools">
+    <meta property="twitter:title" content="Devkitty">
+    <meta property="twitter:description" content="Devkitty - swiss army knife for developers">
     <meta property="twitter:image" content="https://devkitty.app/devkitty.app.png">
 
     <link rel="apple-touch-icon" sizes="180x180" href="https://devkitty.app/favicons/apple-touch-icon.png">
@@ -49,7 +39,14 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156660517-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-156660517-1');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
