--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8" />
-  <meta name="theme-color" content="#ffffff" />
+  <meta name="theme-color" content="#fff" media="(prefers-color-scheme: light)">
+  <meta name="theme-color" content="#fff" media="(prefers-color-scheme: dark)">
 
   <!-- Primary Meta Tags -->
   <title>Devkitty</title>
@@ -29,16 +30,12 @@
   <link rel="icon" type="image/png" sizes="32x32" href="https://devkitty.app/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="https://devkitty.app/favicons/favicon-16x16.png">
   <link rel="manifest" href="https://devkitty.app/favicons/site.webmanifest">
-  <link rel="mask-icon" href="https://devkitty.app/favicons/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="mask-icon" href="https://devkitty.app/favicons/safari-pinned-tab.svg" color="#ED7035">
   <link rel="shortcut icon" href="https://devkitty.app/favicons/favicon.ico">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="msapplication-config" content="https://devkitty.app/favicons/browserconfig.xml">
-  <meta name="theme-color" content="#ffffff">
 
   <link rel="manifest" href="/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
