--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <script async defer src="https://buttons.github.io/buttons.js"></script>
+  <script type="module" src="/src/index.tsx"></script>
 </body>
 
 </html>
