fix: github button

--- a/index.html
+++ b/index.html
@@ -1,48 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1"
+    />
+    <meta charset="utf-8" />
+    <meta
+      name="theme-color"
+      content="#fff"
+      media="(prefers-color-scheme: light)"
+    />
+    <meta
+      name="theme-color"
+      content="#fff"
+      media="(prefers-color-scheme: dark)"
+    />
 
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta charset="utf-8" />
-  <meta name="theme-color" content="#fff" media="(prefers-color-scheme: light)">
-  <meta name="theme-color" content="#fff" media="(prefers-color-scheme: dark)">
+    <!-- Primary Meta Tags -->
+    <title>Devkitty</title>
+    <meta
+      name="title"
+      content="Devkitty"
+    />
+    <meta
+      name="description"
+      content="Devkitty - swiss army knife for developers"
+    />
 
-  <!-- Primary Meta Tags -->
-  <title>Devkitty</title>
-  <meta name="title" content="Devkitty">
-  <meta name="description" content="Devkitty - swiss army knife for developers">
+    <!-- Open Graph / Facebook -->
+    <meta
+      property="og:type"
+      content="website"
+    />
+    <meta
+      property="og:url"
+      content="https://devkitty.app/"
+    />
+    <meta
+      property="og:title"
+      content="Devkitty"
+    />
+    <meta
+      property="og:description"
+      content="Devkitty - swiss army knife for developers"
+    />
+    <meta
+      property="og:image"
+      content="https://devkitty.app/devkitty.app.png"
+    />
 
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://devkitty.app/">
-  <meta property="og:title" content="Devkitty">
-  <meta property="og:description" content="Devkitty - swiss army knife for developers">
-  <meta property="og:image" content="https://devkitty.app/devkitty.app.png">
+    <!-- Twitter -->
+    <meta
+      property="twitter:card"
+      content="summary_large_image"
+    />
+    <meta
+      property="twitter:url"
+      content="https://devkitty.app/"
+    />
+    <meta
+      property="twitter:title"
+      content="Devkitty"
+    />
+    <meta
+      property="twitter:description"
+      content="Devkitty - swiss army knife for developers"
+    />
+    <meta
+      property="twitter:image"
+      content="https://devkitty.app/devkitty.app.png"
+    />
 
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://devkitty.app/">
-  <meta property="twitter:title" content="Devkitty">
-  <meta property="twitter:description" content="Devkitty - swiss army knife for developers">
-  <meta property="twitter:image" content="https://devkitty.app/devkitty.app.png">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="https://devkitty.app/favicons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://devkitty.app/favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="https://devkitty.app/favicons/favicon-16x16.png"
+    />
+    <link
+      rel="manifest"
+      href="https://devkitty.app/favicons/site.webmanifest"
+    />
+    <link
+      rel="mask-icon"
+      href="https://devkitty.app/favicons/safari-pinned-tab.svg"
+      color="#ED7035"
+    />
+    <link
+      rel="shortcut icon"
+      href="https://devkitty.app/favicons/favicon.ico"
+    />
 
-  <link rel="apple-touch-icon" sizes="180x180" href="https://devkitty.app/favicons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://devkitty.app/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://devkitty.app/favicons/favicon-16x16.png">
-  <link rel="manifest" href="https://devkitty.app/favicons/site.webmanifest">
-  <link rel="mask-icon" href="https://devkitty.app/favicons/safari-pinned-tab.svg" color="#ED7035">
-  <link rel="shortcut icon" href="https://devkitty.app/favicons/favicon.ico">
+    <link
+      rel="manifest"
+      href="/manifest.json"
+    />
+    <meta
+      name="msapplication-TileColor"
+      content="#ffffff"
+    />
+    <meta
+      name="msapplication-TileImage"
+      content="/ms-icon-144x144.png"
+    />
+  </head>
 
-  <link rel="manifest" href="/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-</head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
 
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-  <script async defer src="https://buttons.github.io/buttons.js"></script>
-  <script type="module" src="/src/index.tsx"></script>
-</body>
-
+    <script
+      type="module"
+      src="/src/index.tsx"
+    ></script>
+  </body>
 </html>
